force-app/main/default/objects/Assessment__c/fields/S2_Strategic_Planning__c.field-meta.xml
<CustomField>
    <fullName>S2_Strategic_Planning__c</fullName>
    <label>S2: Strategic Planning</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>