force-app/main/default/objects/Assessment__c/fields/S2_Strategic_Planning_Text__c.field-meta.xml
<CustomField>
    <fullName>S2_Strategic_Planning_Text__c</fullName>
    <label>S2: Strategic Planning Text</label>
    <type>TextArea</type>
</CustomField>