force-app/main/default/objects/Assessment__c/fields/S2a_Board_Charged_with_Governance__c.field-meta.xml
<CustomField>
    <fullName>S2a_Board_Charged_with_Governance__c</fullName>
    <label>S2a: Board Charged with Governance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>