force-app/main/default/objects/Assessment__c/fields/S2a_Board_Charged_with_Governance_Text__c.field-meta.xml
<CustomField>
    <fullName>S2a_Board_Charged_with_Governance_Text__c</fullName>
    <label>S2a: Board Charged with Governance Text</label>
    <type>TextArea</type>
</CustomField>