force-app/main/default/objects/Assessment__c/fields/S2b_Bylaws__c.field-meta.xml
<CustomField>
    <fullName>S2b_Bylaws__c</fullName>
    <label>S2b: Bylaws</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>