force-app/main/default/objects/Assessment__c/fields/S2b_Bylaws_Text__c.field-meta.xml
<CustomField>
    <fullName>S2b_Bylaws_Text__c</fullName>
    <label>S2b: Bylaws Text</label>
    <type>TextArea</type>
</CustomField>