force-app/main/default/objects/Assessment__c/fields/S2c_Compliance__c.field-meta.xml
<CustomField>
    <fullName>S2c_Compliance__c</fullName>
    <label>S2c: Compliance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>