force-app/main/default/objects/Assessment__c/fields/S2c_Compliance_Text__c.field-meta.xml
<CustomField>
    <fullName>S2c_Compliance_Text__c</fullName>
    <label>S2c: Compliance Text</label>
    <type>TextArea</type>
</CustomField>