force-app/main/default/objects/Assessment__c/fields/S2d_Director_Oversight__c.field-meta.xml
<CustomField>
    <fullName>S2d_Director_Oversight__c</fullName>
    <label>S2d: Director Oversight</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>