force-app/main/default/objects/Assessment__c/fields/S2d_Director_Oversight_Text__c.field-meta.xml
<CustomField>
    <fullName>S2d_Director_Oversight_Text__c</fullName>
    <label>S2d: Director Oversight Text</label>
    <type>TextArea</type>
</CustomField>