force-app/main/default/objects/Assessment__c/fields/S2e_Advisory_Council_Development__c.field-meta.xml
<CustomField>
    <fullName>S2e_Advisory_Council_Development__c</fullName>
    <label>S2e: Advisory Council Development</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>