force-app/main/default/objects/Assessment__c/fields/S2e_Advisory_Council_Development_Text__c.field-meta.xml
<CustomField>
    <fullName>S2e_Advisory_Council_Development_Text__c</fullName>
    <label>S2e: Advisory Council Development Text</label>
    <type>TextArea</type>
</CustomField>