force-app/main/default/objects/Assessment__c/fields/S3_Fund_Development__c.field-meta.xml
<CustomField>
    <fullName>S3_Fund_Development__c</fullName>
    <label>S3: Fund Development</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>