force-app/main/default/objects/Assessment__c/fields/S3_Fund_Development_Text__c.field-meta.xml
<CustomField>
    <fullName>S3_Fund_Development_Text__c</fullName>
    <label>S3: Fund Development Text</label>
    <type>TextArea</type>
</CustomField>