force-app/main/default/objects/Assessment__c/fields/S3_Strategic_Planning_Text__c.field-meta.xml
<CustomField>
    <fullName>S3_Strategic_Planning_Text__c</fullName>
    <label>S3: Strategic Planning Text</label>
    <type>TextArea</type>
</CustomField>