force-app/main/default/objects/Assessment__c/fields/S4_Governance_and_Finance_Policies__c.field-meta.xml
<CustomField>
    <fullName>S4_Governance_and_Finance_Policies__c</fullName>
    <label>S4: Governance and Finance Policies</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>