force-app/main/default/objects/Assessment__c/fields/S4_Governance_and_Finance_Policies_Text__c.field-meta.xml
<CustomField>
    <fullName>S4_Governance_and_Finance_Policies_Text__c</fullName>
    <label>S4: Governance and Finance Policies Text</label>
    <type>TextArea</type>
</CustomField>