force-app/main/default/objects/Assessment__c/fields/S4a_Legal_Compliance__c.field-meta.xml
<CustomField>
    <fullName>S4a_Legal_Compliance__c</fullName>
    <label>S4a: Legal Compliance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>