force-app/main/default/objects/Assessment__c/fields/S4a_Legal_Compliance_Text__c.field-meta.xml
<CustomField>
    <fullName>S4a_Legal_Compliance_Text__c</fullName>
    <label>S4a: Legal Compliance Text</label>
    <type>TextArea</type>
</CustomField>