force-app/main/default/objects/Assessment__c/fields/S4b_BBBSA_Approved_Name_of_Agency__c.field-meta.xml
<CustomField>
    <fullName>S4b_BBBSA_Approved_Name_of_Agency__c</fullName>
    <label>S4b: BBBSA-Approved Name of Agency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>