force-app/main/default/objects/Assessment__c/fields/S4b_BBBSA_Approved_Name_of_Agency_Text__c.field-meta.xml
<CustomField>
    <fullName>S4b_BBBSA_Approved_Name_of_Agency_Text__c</fullName>
    <label>S4b: BBBSA-Approved Name of Agency Text</label>
    <type>TextArea</type>
</CustomField>