force-app/main/default/objects/Assessment__c/fields/S4b_BBSA_Approved_Service_Text__c.field-meta.xml
<CustomField>
    <fullName>S4b_BBSA_Approved_Service_Text__c</fullName>
    <label>S4b: BBSA-Approved Service Text</label>
    <type>TextArea</type>
</CustomField>