force-app/main/default/objects/Assessment__c/fields/S4b_Board_Meetings_Text__c.field-meta.xml
<CustomField>
    <fullName>S4b_Board_Meetings_Text__c</fullName>
    <label>S4b: Board Meetings Text</label>
    <type>TextArea</type>
</CustomField>