force-app/main/default/objects/Assessment__c/fields/S4b_Executive_Officer_Director_Text__c.field-meta.xml
<CustomField>
    <fullName>S4b_Executive_Officer_Director_Text__c</fullName>
    <label>S4b: Executive Officer/Director Text</label>
    <type>TextArea</type>
</CustomField>