force-app/main/default/objects/Assessment__c/fields/S4b_Fiduciary_Text__c.field-meta.xml
<CustomField>
    <fullName>S4b_Fiduciary_Text__c</fullName>
    <label>S4b: Fiduciary Text</label>
    <type>TextArea</type>
</CustomField>