force-app/main/default/objects/Assessment__c/fields/S4b_Procedure_for_Dissolving_Text__c.field-meta.xml
<CustomField>
    <fullName>S4b_Procedure_for_Dissolving_Text__c</fullName>
    <label>S4b: Procedure for Dissolving Text</label>
    <type>TextArea</type>
</CustomField>