force-app/main/default/objects/Assessment__c/fields/S4b_Program_Council_Creation__c.field-meta.xml
<CustomField>
    <fullName>S4b_Program_Council_Creation__c</fullName>
    <label>S4b: Program Council Creation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>