force-app/main/default/objects/Assessment__c/fields/S4b_Program_Council_Creation_Text__c.field-meta.xml
<CustomField>
    <fullName>S4b_Program_Council_Creation_Text__c</fullName>
    <label>S4b: Program Council Creation Text</label>
    <type>TextArea</type>
</CustomField>