force-app/main/default/objects/Assessment__c/fields/S5_Finance_Procedures__c.field-meta.xml
<CustomField>
    <fullName>S5_Finance_Procedures__c</fullName>
    <label>S5: Finance Procedures</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>