force-app/main/default/objects/Assessment__c/fields/S5_Finance_Procedures_Text__c.field-meta.xml
<CustomField>
    <fullName>S5_Finance_Procedures_Text__c</fullName>
    <label>S5: Finance Procedures Text</label>
    <type>TextArea</type>
</CustomField>