force-app/main/default/objects/Assessment__c/fields/S5a_American_Disabilities_Act_Text__c.field-meta.xml
<CustomField>
    <fullName>S5a_American_Disabilities_Act_Text__c</fullName>
    <label>S5a: American Disabilities Act Text</label>
    <type>TextArea</type>
</CustomField>