force-app/main/default/objects/Assessment__c/fields/S5a_Code_of_Ethics__c.field-meta.xml
<CustomField>
    <fullName>S5a_Code_of_Ethics__c</fullName>
    <label>S5a: Code of Ethics</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>