force-app/main/default/objects/Assessment__c/fields/S5a_Code_of_Ethics_Text__c.field-meta.xml
<CustomField>
    <fullName>S5a_Code_of_Ethics_Text__c</fullName>
    <label>S5a: Code of Ethics Text</label>
    <type>TextArea</type>
</CustomField>