force-app/main/default/objects/Assessment__c/fields/S5a_Commitment_to_Diversity_Text__c.field-meta.xml
<CustomField>
    <fullName>S5a_Commitment_to_Diversity_Text__c</fullName>
    <label>S5a: Commitment to Diversity Text</label>
    <type>TextArea</type>
</CustomField>