force-app/main/default/objects/Assessment__c/fields/S5a_Confidentiality_of_Data__c.field-meta.xml
<CustomField>
    <fullName>S5a_Confidentiality_of_Data__c</fullName>
    <label>S5a: Confidentiality of Data</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>