force-app/main/default/objects/Assessment__c/fields/S5a_Confidentiality_of_Data_Text__c.field-meta.xml
<CustomField>
    <fullName>S5a_Confidentiality_of_Data_Text__c</fullName>
    <label>S5a: Confidentiality of Data Text</label>
    <type>TextArea</type>
</CustomField>