force-app/main/default/objects/Assessment__c/fields/S5a_Conflict_of_Interest_Text__c.field-meta.xml
<CustomField>
    <fullName>S5a_Conflict_of_Interest_Text__c</fullName>
    <label>S5a: Conflict of Interest Text</label>
    <type>TextArea</type>
</CustomField>