force-app/main/default/objects/Assessment__c/fields/S5a_Disposition_of_Complaints_Text__c.field-meta.xml
<CustomField>
    <fullName>S5a_Disposition_of_Complaints_Text__c</fullName>
    <label>S5a: Disposition of Complaints Text</label>
    <type>TextArea</type>
</CustomField>