force-app/main/default/objects/Assessment__c/fields/S5a_Environmentally_Safe_Workplace_Text__c.field-meta.xml
<CustomField>
    <fullName>S5a_Environmentally_Safe_Workplace_Text__c</fullName>
    <label>S5a: Environmentally Safe Workplace Text</label>
    <type>TextArea</type>
</CustomField>