force-app/main/default/objects/Assessment__c/fields/S5a_Nondiscrimination_Text__c.field-meta.xml
<CustomField>
    <fullName>S5a_Nondiscrimination_Text__c</fullName>
    <label>S5a: Nondiscrimination Text</label>
    <type>TextArea</type>
</CustomField>