force-app/main/default/objects/Assessment__c/fields/S5a_Political_Activity__c.field-meta.xml
<CustomField>
    <fullName>S5a_Political_Activity__c</fullName>
    <label>S5a: Political Activity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>