force-app/main/default/objects/Assessment__c/fields/S5a_Political_Activity_Text__c.field-meta.xml
<CustomField>
    <fullName>S5a_Political_Activity_Text__c</fullName>
    <label>S5a: Political Activity Text</label>
    <type>TextArea</type>
</CustomField>