force-app/main/default/objects/Assessment__c/fields/S5a_Record_Retention_Destruction_Text__c.field-meta.xml
<CustomField>
    <fullName>S5a_Record_Retention_Destruction_Text__c</fullName>
    <label>S5a: Record Retention / Destruction Text</label>
    <type>TextArea</type>
</CustomField>