force-app/main/default/objects/Assessment__c/fields/S5a_Security_of_Sensitive_Data_Text__c.field-meta.xml
<CustomField>
    <fullName>S5a_Security_of_Sensitive_Data_Text__c</fullName>
    <label>S5a: Security of Sensitive Data Text</label>
    <type>TextArea</type>
</CustomField>