force-app/main/default/objects/Assessment__c/fields/S5a_Sexual_Harassment__c.field-meta.xml
<CustomField>
    <fullName>S5a_Sexual_Harassment__c</fullName>
    <label>S5a: Sexual Harassment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>