force-app/main/default/objects/Assessment__c/fields/S5a_Staff_as_Volunteer_Mentors_Text__c.field-meta.xml
<CustomField>
    <fullName>S5a_Staff_as_Volunteer_Mentors_Text__c</fullName>
    <label>S5a: Staff as Volunteer Mentors Text</label>
    <type>TextArea</type>
</CustomField>