force-app/main/default/objects/Assessment__c/fields/S5b_Administrative_Costs_Text__c.field-meta.xml
<CustomField>
    <fullName>S5b_Administrative_Costs_Text__c</fullName>
    <label>S5b: Administrative Costs Text</label>
    <type>TextArea</type>
</CustomField>