force-app/main/default/objects/Assessment__c/fields/S5b_Annual_Completion_of_IRS_Form__c.field-meta.xml
<CustomField>
    <fullName>S5b_Annual_Completion_of_IRS_Form__c</fullName>
    <label>S5b: Annual Completion of IRS Form</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>