force-app/main/default/objects/Assessment__c/fields/S5b_Annual_Completion_of_IRS_Form_Text__c.field-meta.xml
<CustomField>
    <fullName>S5b_Annual_Completion_of_IRS_Form_Text__c</fullName>
    <label>S5b: Annual Completion of IRS Form Text</label>
    <type>TextArea</type>
</CustomField>