force-app/main/default/objects/Assessment__c/fields/S5b_Annual_Operating_Budget_Text__c.field-meta.xml
<CustomField>
    <fullName>S5b_Annual_Operating_Budget_Text__c</fullName>
    <label>S5b: Annual Operating Budget Text</label>
    <type>TextArea</type>
</CustomField>