force-app/main/default/objects/Assessment__c/fields/S5b_Capital_Expenditure_Text__c.field-meta.xml
<CustomField>
    <fullName>S5b_Capital_Expenditure_Text__c</fullName>
    <label>S5b: Capital Expenditure Text</label>
    <type>TextArea</type>
</CustomField>