force-app/main/default/objects/Assessment__c/fields/S5b_Cash_Reserves_Text__c.field-meta.xml
<CustomField>
    <fullName>S5b_Cash_Reserves_Text__c</fullName>
    <label>S5b: Cash Reserves Text</label>
    <type>TextArea</type>
</CustomField>