force-app/main/default/objects/Assessment__c/fields/S5b_Check_Authorization_Levels_Text__c.field-meta.xml
<CustomField>
    <fullName>S5b_Check_Authorization_Levels_Text__c</fullName>
    <label>S5b: Check Authorization Levels Text</label>
    <type>TextArea</type>
</CustomField>