force-app/main/default/objects/Assessment__c/fields/S5b_Corporate_Bonding_Text__c.field-meta.xml
<CustomField>
    <fullName>S5b_Corporate_Bonding_Text__c</fullName>
    <label>S5b: Corporate Bonding Text</label>
    <type>TextArea</type>
</CustomField>