force-app/main/default/objects/Assessment__c/fields/S5b_Corporate_Credit_Card__c.field-meta.xml
<CustomField>
    <fullName>S5b_Corporate_Credit_Card__c</fullName>
    <label>S5b: Corporate Credit Card</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>