force-app/main/default/objects/Assessment__c/fields/S5b_Document_Retention_Disposal__c.field-meta.xml
<CustomField>
    <fullName>S5b_Document_Retention_Disposal__c</fullName>
    <label>S5b: Document Retention / Disposal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>