force-app/main/default/objects/Assessment__c/fields/S5b_Document_Retention_Disposal_Text__c.field-meta.xml
<CustomField>
    <fullName>S5b_Document_Retention_Disposal_Text__c</fullName>
    <label>S5b: Document Retention / Disposal Text</label>
    <type>TextArea</type>
</CustomField>