force-app/main/default/objects/Assessment__c/fields/S5b_Generally_Accepted_Accounting__c.field-meta.xml
<CustomField>
    <fullName>S5b_Generally_Accepted_Accounting__c</fullName>
    <label>S5b: Generally Accepted Accounting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>