force-app/main/default/objects/Assessment__c/fields/S5b_Generally_Accepted_Accounting_Text__c.field-meta.xml
<CustomField>
    <fullName>S5b_Generally_Accepted_Accounting_Text__c</fullName>
    <label>S5b: Generally Accepted Accounting Text</label>
    <type>TextArea</type>
</CustomField>