force-app/main/default/objects/Assessment__c/fields/S5b_Independent_Accounting_Firm__c.field-meta.xml
<CustomField>
    <fullName>S5b_Independent_Accounting_Firm__c</fullName>
    <label>S5b: Independent Accounting Firm</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>