force-app/main/default/objects/Assessment__c/fields/S5b_Independent_Financial_Audit_Text__c.field-meta.xml
<CustomField>
    <fullName>S5b_Independent_Financial_Audit_Text__c</fullName>
    <label>S5b: Independent Financial Audit Text</label>
    <type>TextArea</type>
</CustomField>