force-app/main/default/objects/Assessment__c/fields/S5b_Monies_Raised_Text__c.field-meta.xml
<CustomField>
    <fullName>S5b_Monies_Raised_Text__c</fullName>
    <label>S5b: Monies Raised Text</label>
    <type>TextArea</type>
</CustomField>