force-app/main/default/objects/Assessment__c/fields/S5b_Monthly_Review_Text__c.field-meta.xml
<CustomField>
    <fullName>S5b_Monthly_Review_Text__c</fullName>
    <label>S5b: Monthly Review Text</label>
    <type>TextArea</type>
</CustomField>