force-app/main/default/objects/Assessment__c/fields/S5b_Notification_of_Insolvency_Text__c.field-meta.xml
<CustomField>
    <fullName>S5b_Notification_of_Insolvency_Text__c</fullName>
    <label>S5b: Notification of Insolvency Text</label>
    <type>TextArea</type>
</CustomField>